[gd_scene load_steps=2 format=3 uid="uid://b4cj1xbkfayad"]

[ext_resource type="Script" path="res://Scenes/Piano/Piano.gd" id="1_h4kwh"]

[node name="Piano" type="Control"]
custom_minimum_size = Vector2i(840, 460)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -200.0
offset_right = 420.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4kwh")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2i(840, 460)
layout_mode = 0
offset_right = 840.0
offset_bottom = 460.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="WhiteKeys" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2i(836, 400)
layout_mode = 0
offset_top = 30.0
offset_right = 836.0
offset_bottom = 430.0
theme_override_constants/separation = 4

[node name="BlackKeys" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2i(720, 300)
layout_mode = 0
offset_left = 56.0
offset_top = 30.0
offset_right = 776.0
offset_bottom = 330.0
theme_override_constants/separation = 32

[node name="PlayTimer" type="Timer" parent="."]

[node name="InitialTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PlayTimer" to="." method="_on_play_timer_timeout"]
